Terminando Internacionalização do Checkin

--- a/src/exemplo_en_US.properties
+++ b/src/exemplo_en_US.properties
@@ -116,6 +116,11 @@ lblIda												=Go
 lblIda.volta										=Go and Back
 lblEscolheVoo										=Choose Flight
 
+tela.cadDCliente.cliente						=Client
+tela.cadDCliente.tipo							=Type
+tela.cadDCliente.nome							=Name
+tela.cadDCliente.dataDeNascimento				=Date of birth
+tela.cadDCliente.poltrona						=Seat
 tela.cadDCliente.bebe                   		=Baby
 tela.cadDCliente.adulto                     	=Adults
 tela.cadDCliente.crianca                    	=Children
