--- a/src/exemplo_pt_BR.properties
+++ b/src/exemplo_pt_BR.properties
@@ -70,6 +70,7 @@ tela.cadDCliente.cadastroDeCliente          	=Cadastro de Cliente
 tela.cadDCliente.cliente                     	=Cliente
 tela.cadDCliente.tipo                       	=Tipo
 tela.cadDCliente.adulto                     	=Adulto
+tela.cadDCliente.poltrona						=Poltrona
 tela.cadDCliente.formaDeTratamento         	 	=Forma de tratamento
 tela.cadDCliente.nome                       	=Nome
 tela.cadDCliente.sobrenome                  	=Sobrenome
