Retirada de INPUT Codigo no cadastro de Aeronave

--- a/src/exemplo_pt_BR.properties
+++ b/src/exemplo_pt_BR.properties
@@ -181,3 +181,4 @@ mensagem.excluir.exito=Exclusão Realizada com Sucesso!
 mensagem.excluir.erro=Exclusão não Realizado com Sucesso!
 mensagem.checkin.exito=Check-in realizado com Sucesso!
 mensagem.checkin.erro=Passagem não encontrada, verefique os dados e tente novamente!
+mensagem.vazio =Não existem aeronave cadastradas.
