Melhorando codigo, tirando input de codigo no alterar_aeroanve e mudando cadastro de Voo

--- a/src/exemplo_pt_BR.properties
+++ b/src/exemplo_pt_BR.properties
@@ -182,3 +182,4 @@ mensagem.excluir.erro=Exclusão não Realizado com Sucesso!
 mensagem.checkin.exito=Check-in realizado com Sucesso!
 mensagem.checkin.erro=Passagem não encontrada, verefique os dados e tente novamente!
 mensagem.vazio =Não existem aeronave cadastradas.
+mensagem.cadastrar.aeronave	= Não existem aeronaves cadastradas no sistema. <a href='cad_aeronave.jsp'>Cadastre Aeronave</a>
